    the test of the ploidy that was added in 2.1.1 by passing the option
    check.ploidy = FALSE to the function df2genind. Thanks to Frederic Michaud
    for the fix. See https://github.com/thibautjombart/adegenet/issues/231 and
    https://github.com/thibautjombart/adegenet/pull/232 for details

  - `showmekittens()` has gained several new kittens thanks to @rdecamp
    
BUG FIXES

  - A bug where the number of alleles per locus was unaffected after subsetting
    a population with `drop = FALSE` has been fixed. Now, by default, the 
    `@loc.n.all` slot (accessor: `nAll()`) will store the number of observed
    alleles in the current data set, regardless of whether or not these were
    dropped from the data matrix. 
    See https://github.com/thibautjombart/adegenet/issues/234 for details.
    
  - `seppop()` will now take into account `NA` population assignments with the
    new `keepNA` argument. 
    See https://github.com/thibautjombart/adegenet/pull/236 for details.

  - `snapclust()` likelihood calculation was incorrect for haploids. This has
    been fixed in commits 3a5f820db388c9821c3095cd29ad3cd3843237a5 and
    e41d2d598369bb5921465a60adffac9ecb61f86d. 

MISC

  - `snapclust()` will give a better warning message when the number of
    samples in the dataset exceeds computer precision. See
    https://github.com/thibautjombart/adegenet/issues/221 for details

			CHANGES IN ADEGENET VERSION 2.1.1
BUG FIXES

  - A warning will be issued if the user specifies a ploidy range that is less
    than the observed allele dosage when data is imported by df2genind. See
    https://github.com/thibautjombart/adegenet/issues/216 for details.

			CHANGES IN ADEGENET VERSION 2.1.0
NEW FEATURES
	- new set of functions implementing 'snapclust' for genetic
	clustering using fast maximum-likelihood estimation; new functions
	include: `snapclust`, `snapclust.choose.k`, and methods for `AIC`,
	`AICc`, `BIC`, `KIC`
